@@ -24,7 +24,14 @@
 <p>$_("Select a release or a release set below to see more details about it:")</p>
 
 <ul>
-#for release in $releases
+#for release in $officialReleases
+<li style="font-size: 120%;">
+  <a href="${webroot}/releases/${release.id}">${release.description}</a>
+</li>
+#end for
+</ul>
+<ul>
+#for release in $otherReleases
 <li style="font-size: 120%;">
   <a href="${webroot}/releases/${release.id}">${release.description}</a>
 </li>
